Added CSS and JS files

--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <HTML>
   <HEAD>
+      <title>Hello, world!</title>
+      <link rel="stylesheet" type="text/css" href="popup.css">
+      <script id="sap-ui-bootstrap"
+              src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+              data-sap-ui-theme="sap_belize"
+              data-sap-ui-libs="sap.m">
+      </script>
+      <script src="popup.js"></script>
   </HEAD>
 
-  <BODY>
-    <h1>OPENUI5 HELLO WORLD EXTENSION</h1>
+  <BODY id="content" class="sapUiBody">
+      <h1>OpenUI5 Hello World Extension</h1>
   </BODY>
 </HTML>
