--- a/popup.html
+++ b/popup.html
@@ -6,12 +6,13 @@
       <script id="sap-ui-bootstrap"
               src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
               data-sap-ui-theme="sap_belize"
-              data-sap-ui-libs="sap.m">
+              data-sap-ui-libs="sap.m"
+              data-sap-ui-preload="async">
       </script>
       <script src="popup.js"></script>
   </HEAD>
 
-  <BODY id="content" class="sapUiBody">
+  <BODY id="content" class="sapUiBody main">
       <h1>OpenUI5 Hello World Extension</h1>
   </BODY>
 </HTML>
